// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeroLayout /> compare with loading snapshot matches with snapshot 1`] = `
.c0 {
  --container-padding: 1.25rem;
  --heroLayout-imageHeight: 18.75rem;
  display: block;
  position: relative;
}

.c0 .k-HeroLayout__hero {
  position: relative;
  z-index: 6;
  padding: 8.4375rem var(--container-padding) 4.375rem;
}

.c0 .k-HeroLayout__hero__grid {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  gap: 1.5625rem;
}

.c0 .k-HeroLayout__hero__background,
.c0 .k-HeroLayout__page__background {
  z-index: 1;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  background-color: var(--color-grey-000);
  height: var(--heroLayout-imageHeight);
}

.c0 .k-HeroLayout__hero__background img,
.c0 .k-HeroLayout__page__background img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.c0 .k-HeroLayout__hero__background::after,
.c0 .k-HeroLayout__page__background::after {
  content: '';
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  height: var(--heroLayout-imageHeight);
  background: linear-gradient( to bottom,hsla(0deg,0%,100%,0) 15%,hsla(0deg,0%,100%,0.3) 30%,hsla(0deg,0%,100%,0.9) 70%,var(--color-grey-000) );
}

.c0 .k-HeroLayout__hero__block {
  position: relative;
  z-index: 2;
  text-align: center;
}

.c0 .k-HeroLayout__promo {
  background-color: var(--color-grey-200);
  padding: 1.875rem 0;
  position: relative;
  z-index: 5;
}

.c0 .k-HeroLayout__page__background {
  --heroLayout-imageHeight: 16.25rem;
}

.c0 .k-HeroLayout__page {
  margin: 0 var(--container-padding) 3.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 3.125rem 3.125rem;
  display: grid;
}

.c0 .k-HeroLayout__page .k-HeroLayout__topMenu {
  pointer-events: none;
}

.c0 .k-HeroLayout__page .k-HeroLayout__topMenu > * {
  pointer-events: all;
}

.c0 .k-HeroLayout__page .k-HeroLayout__firstAside {
  grid-area: first_aside;
  position: relative;
  z-index: 2;
}

.c0 .k-HeroLayout__page .k-HeroLayout__lastAside {
  grid-area: last_aside;
  position: relative;
  z-index: 2;
}

.c0 .k-HeroLayout__page .k-HeroLayout__loading,
.c0 .k-HeroLayout__page .k-HeroLayout__content {
  grid-area: content;
  position: relative;
  z-index: 2;
}

.c0 .k-HeroLayout__page .k-HeroLayout__loading {
  justify-self: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:640px) {
  .c0 {
    --container-padding: 2.5rem;
  }
}

@media (min-width:1080px) {
  .c0 {
    --heroLayout-imageHeight: 31.25rem;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__hero {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: end;
    -webkit-justify-content: end;
    -ms-flex-pack: end;
    justify-content: end;
    box-sizing: border-box;
    margin-bottom: 3.125rem;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__hero__grid {
    position: relative;
    gap: 4.0625rem;
  }
}

@media (min-width:640px) {
  .c0 .k-HeroLayout__promo {
    padding: 3.75rem 0;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__page__background {
    --heroLayout-imageHeight: 13.75rem;
  }
}

@media (max-width:1079px) {
  .c0 .k-HeroLayout__page {
    grid-template-areas: 'first_aside' 'content' 'last_aside';
  }

  .c0 .k-HeroLayout__page.k-HeroLayout__page--hasTopMenu {
    grid-template-areas: 'first_aside' 'top_menu' 'content' 'last_aside';
  }

  .c0 .k-HeroLayout__page.k-HeroLayout__page--hasTopMenu .k-HeroLayout__topMenu {
    grid-area: top_menu;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__page {
    margin: 4.375rem 4.375rem 6.25rem;
    grid-template-columns: minmax(13.125rem,1fr) minmax(auto,41.875rem) minmax(13.125rem,1fr);
    grid-template-areas: 'first_aside content last_aside';
  }

  .c0 .k-HeroLayout__page .k-HeroLayout__page__background {
    top: -4.375rem;
  }

  .c0 .k-HeroLayout__page.k-HeroLayout__page--hasTopMenu {
    margin-top: 1.875rem;
    grid-template-areas: '........... ....... ..........' 'first_aside content last_aside';
    grid-template-rows: 5rem auto;
  }

  .c0 .k-HeroLayout__page.k-HeroLayout__page--hasTopMenu .k-HeroLayout__page__background {
    top: -1.875rem;
  }

  .c0 .k-HeroLayout__page.k-HeroLayout__page--hasTopMenu .k-HeroLayout__topMenu {
    grid-row: 1 / span 2;
    grid-column: 2 / span 1;
  }
}

@media (max-width:1079px) {
  .c0 .k-HeroLayout__sticky--both,
  .c0 .k-HeroLayout__sticky--mobile {
    -webkit-transition: top var(--transition);
    transition: top var(--transition);
    position: -webkit-sticky !important;
    position: sticky !important;
    z-index: 4 !important;
    top: 0;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__firstAside {
    justify-self: end;
  }

  .c0 .k-HeroLayout__lastAside {
    justify-self: start;
  }

  .c0 .k-HeroLayout__sticky--both .k-HeroLayout__sticky__insideTop,
  .c0 .k-HeroLayout__sticky--both .k-HeroLayout__sticky__inside,
  .c0 .k-HeroLayout__sticky--desktop .k-HeroLayout__sticky__insideTop,
  .c0 .k-HeroLayout__sticky--desktop .k-HeroLayout__sticky__inside {
    -webkit-transition: top var(--transition);
    transition: top var(--transition);
    position: -webkit-sticky !important;
    position: sticky !important;
    z-index: 4 !important;
    top: 0;
    bottom: 1.25rem;
  }

  .c0 .k-HeroLayout__sticky--both .k-HeroLayout__sticky__inside,
  .c0 .k-HeroLayout__sticky--desktop .k-HeroLayout__sticky__inside {
    top: 5.3125rem;
  }
}

<div
  className="c0 k-HeroLayout"
  loading={true}
>
  Content
</div>
`;

exports[`<HeroLayout /> compare with snapshot matches with snapshot 1`] = `
.c0 {
  --container-padding: 1.25rem;
  --heroLayout-imageHeight: 18.75rem;
  display: block;
  position: relative;
}

.c0 .k-HeroLayout__hero {
  position: relative;
  z-index: 6;
  padding: 8.4375rem var(--container-padding) 4.375rem;
}

.c0 .k-HeroLayout__hero__grid {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  gap: 1.5625rem;
}

.c0 .k-HeroLayout__hero__background,
.c0 .k-HeroLayout__page__background {
  z-index: 1;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  background-color: var(--color-grey-000);
  height: var(--heroLayout-imageHeight);
}

.c0 .k-HeroLayout__hero__background img,
.c0 .k-HeroLayout__page__background img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.c0 .k-HeroLayout__hero__background::after,
.c0 .k-HeroLayout__page__background::after {
  content: '';
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  height: var(--heroLayout-imageHeight);
  background: linear-gradient( to bottom,hsla(0deg,0%,100%,0) 15%,hsla(0deg,0%,100%,0.3) 30%,hsla(0deg,0%,100%,0.9) 70%,var(--color-grey-000) );
}

.c0 .k-HeroLayout__hero__block {
  position: relative;
  z-index: 2;
  text-align: center;
}

.c0 .k-HeroLayout__promo {
  background-color: var(--color-grey-200);
  padding: 1.875rem 0;
  position: relative;
  z-index: 5;
}

.c0 .k-HeroLayout__page__background {
  --heroLayout-imageHeight: 16.25rem;
}

.c0 .k-HeroLayout__page {
  margin: 0 var(--container-padding) 3.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 3.125rem 3.125rem;
  display: grid;
}

.c0 .k-HeroLayout__page .k-HeroLayout__topMenu {
  pointer-events: none;
}

.c0 .k-HeroLayout__page .k-HeroLayout__topMenu > * {
  pointer-events: all;
}

.c0 .k-HeroLayout__page .k-HeroLayout__firstAside {
  grid-area: first_aside;
  position: relative;
  z-index: 2;
}

.c0 .k-HeroLayout__page .k-HeroLayout__lastAside {
  grid-area: last_aside;
  position: relative;
  z-index: 2;
}

.c0 .k-HeroLayout__page .k-HeroLayout__loading,
.c0 .k-HeroLayout__page .k-HeroLayout__content {
  grid-area: content;
  position: relative;
  z-index: 2;
}

.c0 .k-HeroLayout__page .k-HeroLayout__loading {
  justify-self: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:640px) {
  .c0 {
    --container-padding: 2.5rem;
  }
}

@media (min-width:1080px) {
  .c0 {
    --heroLayout-imageHeight: 31.25rem;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__hero {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: end;
    -webkit-justify-content: end;
    -ms-flex-pack: end;
    justify-content: end;
    box-sizing: border-box;
    margin-bottom: 3.125rem;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__hero__grid {
    position: relative;
    gap: 4.0625rem;
  }
}

@media (min-width:640px) {
  .c0 .k-HeroLayout__promo {
    padding: 3.75rem 0;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__page__background {
    --heroLayout-imageHeight: 13.75rem;
  }
}

@media (max-width:1079px) {
  .c0 .k-HeroLayout__page {
    grid-template-areas: 'first_aside' 'content' 'last_aside';
  }

  .c0 .k-HeroLayout__page.k-HeroLayout__page--hasTopMenu {
    grid-template-areas: 'first_aside' 'top_menu' 'content' 'last_aside';
  }

  .c0 .k-HeroLayout__page.k-HeroLayout__page--hasTopMenu .k-HeroLayout__topMenu {
    grid-area: top_menu;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__page {
    margin: 4.375rem 4.375rem 6.25rem;
    grid-template-columns: minmax(13.125rem,1fr) minmax(auto,41.875rem) minmax(13.125rem,1fr);
    grid-template-areas: 'first_aside content last_aside';
  }

  .c0 .k-HeroLayout__page .k-HeroLayout__page__background {
    top: -4.375rem;
  }

  .c0 .k-HeroLayout__page.k-HeroLayout__page--hasTopMenu {
    margin-top: 1.875rem;
    grid-template-areas: '........... ....... ..........' 'first_aside content last_aside';
    grid-template-rows: 5rem auto;
  }

  .c0 .k-HeroLayout__page.k-HeroLayout__page--hasTopMenu .k-HeroLayout__page__background {
    top: -1.875rem;
  }

  .c0 .k-HeroLayout__page.k-HeroLayout__page--hasTopMenu .k-HeroLayout__topMenu {
    grid-row: 1 / span 2;
    grid-column: 2 / span 1;
  }
}

@media (max-width:1079px) {
  .c0 .k-HeroLayout__sticky--both,
  .c0 .k-HeroLayout__sticky--mobile {
    -webkit-transition: top var(--transition);
    transition: top var(--transition);
    position: -webkit-sticky !important;
    position: sticky !important;
    z-index: 4 !important;
    top: 0;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__firstAside {
    justify-self: end;
  }

  .c0 .k-HeroLayout__lastAside {
    justify-self: start;
  }

  .c0 .k-HeroLayout__sticky--both .k-HeroLayout__sticky__insideTop,
  .c0 .k-HeroLayout__sticky--both .k-HeroLayout__sticky__inside,
  .c0 .k-HeroLayout__sticky--desktop .k-HeroLayout__sticky__insideTop,
  .c0 .k-HeroLayout__sticky--desktop .k-HeroLayout__sticky__inside {
    -webkit-transition: top var(--transition);
    transition: top var(--transition);
    position: -webkit-sticky !important;
    position: sticky !important;
    z-index: 4 !important;
    top: 0;
    bottom: 1.25rem;
  }

  .c0 .k-HeroLayout__sticky--both .k-HeroLayout__sticky__inside,
  .c0 .k-HeroLayout__sticky--desktop .k-HeroLayout__sticky__inside {
    top: 5.3125rem;
  }
}

<div
  className="c0 k-HeroLayout"
>
  Content
</div>
`;
